MB-4782 fix spacing between heading and bulleted lists

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -53,6 +53,13 @@
     @include u-margin-top(3);
   }
 
+  h5 {
+    @include u-margin(0);
+  }
+  h5 + ul {
+    @include u-margin-top(0);
+  }
+
   p,
   ul {
     font-size: 15px;
@@ -74,7 +81,9 @@
   }
 
   p + ul,
-  ul + p {
+  ul + p,
+  p + h5,
+  ul + h5 {
     @include u-margin-top(2);
   }
 
